--- a/react-portfolio/src/components/footer/footer.style.css
+++ b/react-portfolio/src/components/footer/footer.style.css
@@ -4,4 +4,5 @@
     font-size: 1.5em;
     border: 2px solid #101018f8;
     border-top-left-radius: 3px;
+    background-image: url("../../assets/images/footer/footerWallpaper2.jpg");
 }
