--- a/react-portfolio/src/components/navbar/navbar.style.css
+++ b/react-portfolio/src/components/navbar/navbar.style.css
@@ -1,15 +1,37 @@
 .logo {
-    width: 25%
+    width: 35%;
+    background: rgb(248, 240, 132);
+    opacity: 1;
+    border-style: ridge;
+    border-color: black;
+}
+
+.bg-img {
+    background-image: url("../../assets/images/navbar/navWallpaper4.jpg");
+}
+
+.nav-link {
+    font-family: "East Sea Dokdo", cursive;
+    color: rgb(0, 0, 0);
+    font-size: 25px;
+    background-color: rgb(253, 255, 145);
+    opacity: 0.6;
 }
 
 .nav-theme {
-    background-color: antiquewhite;
+    background-color: rgb(253, 255, 145);
     font-size: 20px;
 }
+
 
 .animate-navbar {
     box-shadow: 1px 1px 1px #222;
     animation: moveDown 0.5s ease-in-out;
+}
+
+.navbar-toggler-icon {
+    background-image: url("../../assets/images/navbar/navbarIcon.png");
+    border: 1px solid transparent;
 }
 
 @keyframes moveDown {
