--- a/react-portfolio/src/pages/about/about.style.css
+++ b/react-portfolio/src/pages/about/about.style.css
@@ -12,8 +12,10 @@
     background-color: rgba(255, 255, 255, 0.747);
 }
 
-.font-details {
+.title {
     font-size: 3em;
     font-weight: 500;
-    color: #231d5af8;
+    font-family: 'East Sea Dokdo', cursive;
+    color: rgb(0, 0, 0);
 }
+
