--- a/react-portfolio/src/pages/skills/skills.style.css
+++ b/react-portfolio/src/pages/skills/skills.style.css
@@ -18,5 +18,6 @@
 .font-details {
     font-size: 3em;
     font-weight: 500;
-    color: #ffffff;
+    font-family: "East Sea Dokdo", cursive;
+    color: #000000;
 }
