--- a/react-portfolio/src/components/timeline/timeline.style.css
+++ b/react-portfolio/src/components/timeline/timeline.style.css
@@ -4,7 +4,7 @@
     -webkit-text-decoration: none;
     text-decoration: none;
     font-size: 14px;
-    background-color: rgb(124, 214, 72);
+    background-color: rgb(19, 126, 15);
     border: none;
     border-radius: 4px;
 
@@ -25,3 +25,7 @@
     color: black;
 }
 
+.card {
+    background-image: url("../../assets/images/timeline/cardBackground.jpg");
+    background-size: cover;
+}
