--- a/src/pages/contact/contact.style.css
+++ b/src/pages/contact/contact.style.css
@@ -3,8 +3,7 @@
     background-size: cover;
     background-repeat: no-repeat;
 
-    font-family: "East Sea Dokdo", cursive;
-    color: black;
+
 }
 
 .btn {
@@ -13,4 +12,9 @@
     border-radius: 4px;
 
     color: beige;
+}
+
+h1 {
+    font-family: "East Sea Dokdo", cursive;
+    color: black;
 }
